Fix font sizing and spacing for PC viewing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ h1, h2 {
 #hero-outer {
     height: 600px;
     width: 100%;
-    margin-top: 75px;
+    margin: 75px 24px 48px 24px;
     overflow: hidden;
     position: relative;
     display: inline-block;
@@ -183,7 +183,8 @@ h1, h2 {
     text-align: center;
     background-color: #A3BAB7;
     padding: 48px 24px;
-    box-sizing: border-box;    
+    box-sizing: border-box;  
+    font-size: 1.1em;  
 }
 
 #left-about {
@@ -215,7 +216,7 @@ hr {
 
 .left-about-heading {
     width: 60%;
-    line-height: 20px;
+    /*line-height: 20px;*/
     clear: both;
     margin: 0 auto;
 }
@@ -228,14 +229,14 @@ hr {
 
 .right-about-heading {
     width: 60%;
-    line-height: 20px;
+    /*line-height: 20px;*/
     clear: both;
     margin: 0 auto;
 }
 
 .center-about-heading {
     width: 60%;
-    line-height: 20px;
+    /*line-height: 20px;*/
     margin: 0 auto;
 }
 
@@ -283,29 +284,32 @@ hr {
 #events {
     width: 100%;
     height: 600px;
-    padding: 48px 24px;
+    padding: 48px 0px;
     display: inline-block;
     background-color: #f6f6f6;
 }
 
 #events-title {
-    margin-bottom: 48px;
+    margin-bottom: 24px;
     text-align: center;
     font-size: 230%;
 }
 
 #events div {
-    width: 33%;
+    width: 33.33%;
     height: 400px;
     float: left;
     text-align: center;
+    font-size: 1.1em;
     padding: 24px;
-    /*border: 2px solid #fff;*/
-    background-color: #fff; 
-    border-style: solid; 
-    border-width: 12px;
-    border-color: #f6f6f6;
+    background-color: #fff;
+    border: 12px solid #f6f6f6;
+    border-radius: 15px;
     box-sizing: border-box;
+}
+
+#events div h2 {
+    padding: 24px;
 }
 
 /*
